--- a/main/build.gradle
+++ b/main/build.gradle
@@ -7,5 +7,25 @@ repositories {
 dependencies {
     compile('org.junit.jupiter:junit-jupiter-api:5.4.2')
     compile('org.junit.jupiter:junit-jupiter-engine:5.4.2')
+    compile('com.google.code.gson:gson:2.8.6')
     compile group: 'com.jayway.restassured', name: 'rest-assured', version: '2.9.0'
+}
+
+buildscript {
+    repositories {
+        maven {
+            url "https://plugins.gradle.org/m2/"
+        }
+    }
+    dependencies {
+        classpath "com.diffplug.spotless:spotless-plugin-gradle:3.27.2"
+    }
+}
+
+apply plugin: "com.diffplug.gradle.spotless"
+
+spotless {
+    java {
+        googleJavaFormat()
+    }
 }
