--- a/main/build.gradle
+++ b/main/build.gradle
@@ -5,10 +5,10 @@ repositories {
 }
 
 dependencies {
-    compile('org.junit.jupiter:junit-jupiter-api:5.4.2')
-    compile('org.junit.jupiter:junit-jupiter-engine:5.4.2')
-    compile('com.google.code.gson:gson:2.8.6')
-    compile group: 'com.jayway.restassured', name: 'rest-assured', version: '2.9.0'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.4.2'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.4.2'
+    testCompile('com.google.code.gson:gson:2.8.6')
+    testCompile group: 'com.jayway.restassured', name: 'rest-assured', version: '2.9.0'
 }
 
 buildscript {
@@ -30,15 +30,3 @@ spotless {
     }
 }
 
-buildscript {
-    repositories {
-        maven {
-            url "https://plugins.gradle.org/m2/"
-        }
-    }
-    dependencies {
-        classpath "gradle.plugin.com.github.lkishalmi.gatling:gradle-gatling-plugin:3.3.0"
-    }
-}
-
-apply plugin: "com.github.lkishalmi.gatling"
