--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,9 @@ buildscript {
     }
 }
 
+plugins {
+    id "com.github.lkishalmi.gatling" version "0.4.1"
+}
 allprojects {
     repositories {
         google()
@@ -22,6 +25,13 @@ allprojects {
     }
 }
 
-task clean(type: Delete) {
-    delete rootProject.buildDir
+
+
+
+repositories {
+    mavenCentral()
+}
+apply plugin: 'scala'
+dependencies {
+    compile 'org.scala-lang:scala-library:2.11.8'
 }
