--- a/build.gradle
+++ b/build.gradle
@@ -4,34 +4,24 @@ buildscript {
     repositories {
         google()
         jcenter()
-        
+
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.3.0'
-        
+
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
 }
 
-plugins {
-    id "com.github.lkishalmi.gatling" version "0.4.1"
-}
 allprojects {
     repositories {
         google()
         jcenter()
-        
+
     }
 }
 
-
-
-
-repositories {
-    mavenCentral()
-}
-apply plugin: 'scala'
-dependencies {
-    compile 'org.scala-lang:scala-library:2.11.8'
+task clean(type: Delete) {
+    delete rootProject.buildDir
 }
