--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,13 @@
+buildscript {
+    repositories {
+        mavenCentral()
+    }
+}
+
 allprojects {
     repositories {
         google()
         jcenter()
+        mavenCentral()
     }
 }
