--- a/gatling/build.gradle
+++ b/gatling/build.gradle
@@ -1,3 +1,9 @@
+buildscript {
+    repositories {
+        mavenCentral()
+    }
+}
+
 plugins {
     id "com.github.lkishalmi.gatling" version "3.3.0"
 }
@@ -8,3 +14,4 @@ apply plugin: 'scala'
 dependencies {
     compile 'org.scala-lang:scala-library:2.11.8'
 }
+
