--- a/main/build.gradle
+++ b/main/build.gradle
@@ -13,16 +13,17 @@ dependencies {
 
 buildscript {
     repositories {
+        mavenCentral()
         maven {
             url "https://plugins.gradle.org/m2/"
         }
     }
     dependencies {
-        classpath "com.diffplug.spotless:spotless-plugin-gradle:3.27.2"
+        classpath "com.diffplug.spotless:spotless-plugin-gradle:5.8.2"
     }
 }
 
-apply plugin: "com.diffplug.gradle.spotless"
+apply plugin: "com.diffplug.spotless"
 
 spotless {
     java {
