Upgrade Rest Assured Library

--- a/main/build.gradle
+++ b/main/build.gradle
@@ -8,7 +8,7 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.4.2'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.4.2'
     testCompile('com.google.code.gson:gson:2.8.6')
-    testCompile group: 'com.jayway.restassured', name: 'rest-assured', version: '2.9.0'
+    testCompile group: 'io.rest-assured', name: 'rest-assured', version: '4.3.2'
 }
 
 buildscript {
